--- a/src/list_dates/listDates.css
+++ b/src/list_dates/listDates.css
@@ -25,20 +25,22 @@
     height: 60vh;
     box-shadow: 0 0 10px hsla(60, 86%, 81%, 0.9);
     width: 60vh;
-    border-radius: 5px;
-
-    
+    border-radius: 5px;    
 }
-/* .payday-marker {
+form {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background-color: #4caf50;
-    color: white;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-  } */
+  }
+  
+  form input {
+    margin: 0 auto;
+  }
+  
+  form button {
+    margin: 0 auto;
+  }
+
   table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -48,8 +50,7 @@
   }
   
   th, td {
-    text-align: left;
+    text-align: center;
     padding: 8px;
   }
   
-  /* tr:nth-child(even){background-color: #f2f2f2} */
