--- a/src/list_dates/listDates.css
+++ b/src/list_dates/listDates.css
@@ -1,7 +1,7 @@
 .custom-calendar{
     background-color: #f8d648;
     align-items: center;
-    max-height: 70vh;
+    max-height: 100vh;
     border-color: #f8d648;
     color:#050d21;
     width: 50vh;
@@ -15,6 +15,7 @@
     height: 100vh;
     color:#050d21;
     border-radius: 5px;
+    min-height: 60vh;
 }
 .calendarbox{
     display: flex;
@@ -22,7 +23,8 @@
     align-items: center;
     flex-direction: column;
     background-color: #f8d648;;
-    height: 60vh;
+    min-height: 60vh;
+    max-height: 80vh;
     box-shadow: 0 0 10px hsla(60, 86%, 81%, 0.9);
     width: 60vh;
     border-radius: 5px;    
@@ -42,15 +44,55 @@ form {
   }
 
   table {
+    margin-top: 20px;
     border-collapse: collapse;
     border-spacing: 0;
     width: 50%;
     border: 1px solid black;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
   }
   
   th, td {
     text-align: center;
     padding: 8px;
+  }
+  .back{
+    margin-bottom: 20px;
+    padding: 0 14px;
+    min-width: 50vh;
+    min-height: 5vh;
+    align-items: center;
+    background-color: #fee6e3;
+    border: 2px solid #111;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #111;
+    cursor: pointer;
+    display: flex;
+    font-family: Inter,sans-serif;
+    font-size: 16px;
+    height: 48px;
+    justify-content: center;
+    line-height: 24px;
+    max-width: 100%;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    z-index: 1;
+  }
+
+  .back:active {
+    background-color: #ffdeda;
+    outline: 0;
+  }
+  
+  @media (min-width: 768px) {
+    .back{
+      padding: 0 40px;
+    }
   }
   
