--- a/src/how_much/howMuch.css
+++ b/src/how_much/howMuch.css
@@ -104,7 +104,7 @@
   
   .see_more{
     padding: 0 14px;
-    min-width: 50vh;
+    min-width: 30vh;
     min-height: 5vh;
     align-items: center;
     background-color: #fee6e3;
@@ -116,11 +116,10 @@
     display: flex;
     font-family: Inter,sans-serif;
     font-size: 16px;
-    height: 48px;
+    height: 4vh;
     justify-content: center;
-    line-height: 24px;
+    line-height: 20px;
     max-width: 100%;
-    padding: 0 25px;
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -128,6 +127,7 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     z-index: 1;
+    margin-right: 1vh;
   }
   
   .see_more:active {
