--- a/src/list_dates/listDates.css
+++ b/src/list_dates/listDates.css
@@ -64,7 +64,7 @@ form {
   .back{
     margin-bottom: 2vh;
     padding: 0 14px;
-    min-width: 50vh;
+    min-width: 30vh;
     min-height: 5vh;
     align-items: center;
     background-color: #fee6e3;
@@ -76,11 +76,10 @@ form {
     display: flex;
     font-family: Inter,sans-serif;
     font-size: 16px;
-    height: 48px;
+    height: 4vh;
     justify-content: center;
-    line-height: 24px;
+    line-height: 20px;
     max-width: 100%;
-    padding: 0 25px;
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -88,6 +87,7 @@ form {
     -webkit-user-select: none;
     touch-action: manipulation;
     z-index: 1;
+    margin-right: 1vh;
   }
 
   .back:active {
