got rid of max-height

--- a/src/how_much/howMuch.css
+++ b/src/how_much/howMuch.css
@@ -67,7 +67,7 @@
 
   .button{
     align-items: center;
-    margin-bottom: 10px; 
+    margin-bottom: 2vh; 
     margin-top: 0.5vh;
     padding: 0 14px;
     min-width: 30vh;
