--- a/src/list_dates/listDates.css
+++ b/src/list_dates/listDates.css
@@ -1,12 +1,4 @@
-.custom-calendar{
-    background-color: #f8d648;
-    align-items: center;
-    max-height: 80vh;
-    border-color: #f8d648;
-    color:#050d21;
-    width: 50vh;
-    border-radius: 5px;
-}
+
 .content{
     display: flex;
     justify-content: center;
@@ -21,6 +13,7 @@
   .content {
     font-size: 2vh;
     width: 100%;
+    height: 100%;
   }
 }
 .calendarbox{
@@ -31,7 +24,14 @@
     background-color: #f8d648;
     box-shadow: 0 0 10px hsla(60, 86%, 81%, 0.9);
     width: 60vh;
-    border-radius: 1vh;    
+    border-radius: 1vh;  
+    max-height: 100%;  
+}
+@media (max-width: 768px) {
+  .calendarbox {
+    width: 100%;
+    max-height: 70vh;
+  }
 }
 form {
     display: flex;
@@ -53,14 +53,16 @@ form {
     border-spacing: 0;
     width: 50%;
     border: 1px solid black;
-    margin-bottom: 40px;
+    margin-bottom: 2vh;
   }
   
   th, td {
     text-align: center;
-    padding: 8px;
+    padding: 3px;
   }
   .back{
+    font-size: 12px;
+    padding: 8px;
     margin-bottom: 2vh;
     padding: 0 14px;
     min-width: 30vh;
@@ -100,4 +102,6 @@ form {
     }
   }
 
-  
+.pay-day-input{
+  margin-bottom: 1vh;
+}
