--- a/src/list_dates/listDates.css
+++ b/src/list_dates/listDates.css
@@ -6,12 +6,13 @@
     background-color: #050d21;
     height: 100vh;
     color:#050d21;
+    min-height: 60vh;
 }
 @media (max-width: 768px) {
   .content {
     font-size: 2vh;
     width: 100%;
-    height: 100%;
+    min-height: 50vh;
   }
 }
 .calendarbox{
