--- a/src/list_dates/listDates.css
+++ b/src/list_dates/listDates.css
@@ -10,7 +10,7 @@
 }
 @media (max-width: 768px) {
   .content {
-    font-size: 2vh;
+    font-size: 13px;
     width: 100%;
     min-height: 50vh;
   }
